--- a/home/templates/html/index.html
+++ b/home/templates/html/index.html
@@ -547,15 +547,18 @@ nav a.active {
                      <h6>🌎 संपूर्ण सामान्य ज्ञान</h6><br>
                      <h6>🤔 ऐकावे ते नवलच !</h6><br>
                      <h6>💥 यासह सुविचार, म्हणी, वाकप्रचार, इंग्रजी शब्द, नकाशे, गीतमंच, संत-महात्मे, बोधकथा इ.</h6><br>
+                     <h6>📧 'शालेय परिपाठ' हे पुस्तक मागवण्यासाठी कृपया आपले / शाळेचे संपूर्ण नाव, पिनकोडसह पत्ता, फोन नंबर तसेच 8390365366 या मोबाईल क्रमांकावर फोन पे अथवा गुगल पे अथवा QR कोडने पैसे सेंड केलेला स्क्रीन शॉट पाठवावा.</h6><br>
                      <h6>&#128214;पुस्तकाचे नाव - शालेय परिपाठ</h6><br>
                      <h6>✍ लेखक - अजित कणसे</h6><br>
                      <h6>📚 प्रकाशक - कमलाई प्रकाशन</h6><br>
                      <h6>📘 पुस्तकाची साईज - A4 साईज</h6><br>
+                     <h6>📒 बांधणी - पुठ्ठा बाईंडिंग</h6><br>
                      <h6>📄 एकूण पाने - 424</h6><br>
                      <h6>📄 एकूण पाने - 424</h6><br>
                      <h6>💵मूळ किंमत - रु. 600/-</h6><br>
                      <h6>💵सवलत मूल्य -  रु. 500/- घरपोच</h6><br>
                      <h6>🎉जास्त पुस्तके घेतल्यास सवलत मूल्यावर सवलत मिळेल.</h6><br>
+                     <h6>📱संपर्क क्र : 8390365366, 9403484533</h6><br>
                   </div>
         </section>
         <!--//product end//-->
